fix vertical spacing in config sections

--- a/src/assets/scss/_forms.scss
+++ b/src/assets/scss/_forms.scss
@@ -111,8 +111,8 @@ input {
 .combo {
     display: block;
     position: relative;
-    margin-bottom: 1rem;
-    margin-block-end: 1rem;
+    // margin-bottom: 1rem;
+    // margin-block-end: 1rem;
 }
 
 .combo-input {
