--- a/src/assets/scss/components/playground-configuration.scss
+++ b/src/assets/scss/components/playground-configuration.scss
@@ -118,7 +118,7 @@
 
 .playground__config-options__section {
     border-bottom: 1px solid var(--divider-color);
-    padding: .5rem 1rem;
+    padding: 1rem;
 }
 
 
